Fix: Align artist and songtitle to center

--- a/prosjekt2/frontend/src/components/AllSongsComponents/AllSongsList.css
+++ b/prosjekt2/frontend/src/components/AllSongsComponents/AllSongsList.css
@@ -43,6 +43,7 @@ td {
 	display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 10px;
+	align-items: center;
 }
 
 @media (max-width: 600px) {
